<resources>
    <string name="app_name">tp1</string>
    <string name="name">Nom</string>
    <string name="firstname">Prénom</string>
    <string name="age">Âge</string>
    <string name="skills">Domaine de compétences</string>
    <string name="phone">Numéro de téléphone</string>

    <string name="submit">Entrer</string>

    <string name="submit_true">Valider</string>
    <string name="submit_false">Annuler</string>
</resources>